<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    app:showDividers="middle|end"
    app:divider="@drawable/about_buttons_divider">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:background="@color/primary"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="30dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/box"/>

    <ImageView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

  </LinearLayout>

  <Button
      android:id="@+id/btn_faq"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_btn_faq"
      android:background="@android:color/transparent"/>

  <Button
      android:id="@+id/btn_feedback"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_btn_feedback"
      android:background="@android:color/transparent"/>

  <Button
      android:id="@+id/btn_contact"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_btn_contact"
      android:background="@android:color/transparent"/>

  <Button
      android:id="@+id/btn_license"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_btn_license"
      android:background="@android:color/transparent"/>

</android.support.v7.widget.LinearLayoutCompat>